# matrix-reloaded

./: .gitignore  Cargo.toml  Config.example.toml  Config.toml  Config.toml.example  README.md  configuration.toml  users.json  users_test.json
.github/workflows/: audit-on-push.yml  general.yml  run.yml  scheduled-audit.yml
src/: client.rs  configuration.rs  errors.rs  events.rs  friendship.rs  lib.rs  main.rs  metrics.rs  progress.rs  report.rs  room.rs  simulation.rs  sync.rs  text.rs  time.rs  user.rs  users_state.rs
tests/: config.rs  on_create_room.rs
